SET(LIB_NAME osgdb_serializers_osgCal)
#SET(HEADER_PATH "${osgAudio_SOURCE_DIR}/include/${LIB_NAME}")
SET(OSGCAL_USER_DEFINED_DYNAMIC_OR_STATIC MODULE)

#SET(LIB_PUBLIC_HEADERS ...)

ADD_LIBRARY(
    ${LIB_NAME}
    ${OSGCAL_USER_DEFINED_DYNAMIC_OR_STATIC}
    #${LIB_PUBLIC_HEADERS}
    IO_Model.cpp

)


add_definitions( 
  -DOSGPLUGINOSGCAL_EXPORTS
  # -DWIN32
  # -D_DEBUG
  # -D_USRDLL
  # -D_WINDOWS
) 
#INCLUDE_WITH_VARIABLES( ${LIB_NAME} ${SUBSYSTEM_INCLUDES} )
INCLUDE_DIRECTORIES( ${OSG_INCLUDE_DIRS}   ${OSGCAL_INCLUDE_DIR}
  ${OSG_INCLUDE_DIR}
  ${CAL3D_INCLUDE_DIR})
#LINK_WITH_VARIABLES( ${LIB_NAME} ${SUBSYSTEM_LINKS} )

TARGET_LINK_LIBRARIES( ${LIB_NAME} ${CAL3D_LIBRARY} osgCal ${SUBSYSTEM_TARGET_LINKS}  ${OSG_LIBRARIES})

IF(MSVC_IDE)
    # Ugly workaround to remove the "/debug" or "/release" in each output
#    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
#    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
ENDIF()
    
INCLUDE(ModuleInstall OPTIONAL)
